@@ -1,3 +1,12 @@
+2007-12-21  Luca Ferretti  <elle.uca@libero.it>
+
+	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
+	(gnome_theme_meta_info_free), (gnome_theme_meta_info_print),
+	(gnome_theme_meta_info_compare):
+	* gnome-theme-info.h:
+	Add support for WindowTitleFont and DocumentsFont keys in
+	meta-themes. See bug #504250
+
 2007-12-14  Jens Granseuer  <jensgr@gmx.net>
 
 	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme): don't
